updating footer and fixing horizontal scroll but on simulator about page

--- a/stylesheets/monte-carlo-simulator-about.css
+++ b/stylesheets/monte-carlo-simulator-about.css
@@ -18,8 +18,6 @@ code, pre {
 html {
     box-sizing: border-box;
     font-size: 16px;
-    background: linear-gradient(135deg, #ffffff, #c3c3f3, #0046f6);
-    background-size: 400% 400%;
 }
 
 header {
@@ -152,7 +150,7 @@ header {
 
 .planned-features-container {
     padding: 1rem 1rem 0 1rem;
-    width: 25rem;
+    max-width: 25rem;
     margin-bottom: 2rem;
     display: flex;
     justify-content: center;
@@ -169,7 +167,7 @@ header {
     padding: 0.5rem;
 }
 
-.footer {
+footer {
     display: flex;
     justify-content: center;
     align-content: center;
